--- a/plugins/utils/translate/config.ini
+++ b/plugins/utils/translate/config.ini
@@ -5,5 +5,5 @@ max_core: 0
 client_type:
 envs:
 bins:
-packages: emoji, googletrans==4.0.0rc1
+packages: emoji, git+https://github.com/StarkBotsIndustries/googletrans.git
 depends:
